--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 </head>
 
 <body>
-    <div class="container-fluid bg-light">
+    <div class="container-fluid bg-light ">
         <div class="container bg-light">
-            <ul class="navbar">
+            <ul class="navbar mb-1">
                 <li class="navbar-item" style="margin-right: 180px;">
                     <img id="img-logo" src="images/logo.png">
                 </li>
@@ -51,29 +51,44 @@
             </ul>
         </div>
     </div>
-    <div class="container-fluid" id="main-intro" style="background-color: rgb(11, 9, 46);">
-        <div class="container mt-5">
-            <div class="container w-75" id="main-intro-written">
-                <h1 class="bold-font"> <span style="color:rgb(244, 95, 11);"> 5K </span> <span
-                        style="color: rgb(249, 209, 4);"> +
-                    </span></h1>
-                <h3 class="bold-font" style="color: white; font-weight: 550;">Happy Clients</h3>
-                <p class="light-font" style="color: white; width: 500px;"> Join the community of clients who have
-                    experienced joy and
-                    success with our
-                    products and services.</p>
-                <h1 class="bold-font"> <span style="color: rgb(244, 95, 11);"> 6000K </span> <span
-                        style="color: rgb(249, 209, 4);"> +
-                    </span></h1>
-                <h3 class="bold-font" style="color: white; font-weight: 550;">Project Complete</h3>
-                <p class="light-font" style="color: white; width: 500px;"> Experience the simplicity of our Development
-                    - each designed for
-                    easy use and customization.</p>
-                <div><a href="#" class="btn light-font" id="services-btn" style="font-size: 19px;">Our Services</a> <a
-                        href="#" class="btn light-font ms-5" id="estimate-btn" style="font-size: 19px;">Estimate A Project
-                    </a>
+    <div class="container-fluid mt-0 mb-5" id="main-intro" style="background-color: rgb(11, 9, 46);">
+        <div class="container mt-0 mb-5 py-5">
+            <div class="container w-75 mt-4 pt-3" id="main-intro-written">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h1 class="bold-font mt-5"> <span style="color:rgb(244, 95, 11); font-size: 50px;"> 5K </span>
+                            <span style="color: rgb(249, 209, 4); font-size: 50px;"> +
+                            </span></h1>
+                        <h2 class="bold-font" style="color: white; font-weight: 550;">Happy Clients</h2>
+                        <p class="light-font" style="color: white;"> Join the community of clients who have
+                            experienced joy and
+                            success with our
+                            products and services.</p>
+                        <h1 class="bold-font"> <span style="color: rgb(244, 95, 11); font-size: 50px;"> 6000K </span>
+                            <span style="color: rgb(249, 209, 4); font-size: 50px;"> +
+                            </span></h1>
+                        <h2 class="bold-font" style="color: white; font-weight: 550;">Project Complete</h2>
+                        <p class="light-font" style="color: white;"> Experience the simplicity of our
+                            Development
+                            - each designed for easy use and customization.</p>
+                        <div><a href="#" class="btn light-font" id="services-btn" style="font-size: 19px;">Our
+                                Services</a>
+                            <a href="#" class="btn light-font ms-5" id="estimate-btn" style="font-size: 19px;">Estimate
+                                A
+                                Project
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6">
+                        <DIV class="container-fluid pb-3">
+                            <img id="main-img" src="images/main.png">
+                        </DIV>
+                    </div>
+
                 </div>
             </div>
+
         </div>
     </div>
 </body>
