--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+    <!--navigation-bar-->
     <div class="container-fluid bg-light ">
         <div class="container bg-light">
             <ul class="navbar mb-1">
@@ -51,6 +52,7 @@
             </ul>
         </div>
     </div>
+    <!--page1-->
     <div class="container-fluid mt-0 mb-5" id="main-intro" style="background-color: rgb(11, 9, 46);">
         <div class="container mt-0 mb-5 py-5">
             <div class="container w-75 mt-4 pt-3" id="main-intro-written">
