--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
 </head>
 
 <body>
+
     <!--navigation-bar-->
-    <div class="container-fluid bg-light ">
-        <div class="container bg-light">
+
+    <div class="container-fluid bg-light fixed-top" data-bs-toggle="collapse">
+        <div class="container bg-light ">
             <ul class="navbar mb-1">
                 <li class="navbar-item" style="margin-right: 180px;">
                     <img id="img-logo" src="images/logo.png">
@@ -52,15 +54,18 @@
             </ul>
         </div>
     </div>
+
     <!--page1-->
-    <div class="container-fluid mt-0 mb-5" id="main-intro" style="background-color: rgb(11, 9, 46);">
+
+    <div class="container-fluid mt-0 mb-5" id="page1" style="background-color: rgb(11, 9, 46);">
         <div class="container mt-0 mb-5 py-5">
             <div class="container w-75 mt-4 pt-3" id="main-intro-written">
                 <div class="row">
                     <div class="col-sm-6">
                         <h1 class="bold-font mt-5"> <span style="color:rgb(244, 95, 11); font-size: 50px;"> 5K </span>
                             <span style="color: rgb(249, 209, 4); font-size: 50px;"> +
-                            </span></h1>
+                            </span>
+                        </h1>
                         <h2 class="bold-font" style="color: white; font-weight: 550;">Happy Clients</h2>
                         <p class="light-font" style="color: white;"> Join the community of clients who have
                             experienced joy and
@@ -68,7 +73,8 @@
                             products and services.</p>
                         <h1 class="bold-font"> <span style="color: rgb(244, 95, 11); font-size: 50px;"> 6000K </span>
                             <span style="color: rgb(249, 209, 4); font-size: 50px;"> +
-                            </span></h1>
+                            </span>
+                        </h1>
                         <h2 class="bold-font" style="color: white; font-weight: 550;">Project Complete</h2>
                         <p class="light-font" style="color: white;"> Experience the simplicity of our
                             Development
@@ -91,6 +97,248 @@
                 </div>
             </div>
 
+        </div>
+    </div>
+
+    <!--3_cols-->
+
+    <div class="container-fluid">
+        <div class="container mb-4">
+            <div class="row" style="font-family: Arial, Helvetica, sans-serif;">
+                <div class="col-sm-4">
+                    <h6 style="font-weight: 700;"><span>Welkin Web Solution</span> </h6>
+                    <p style="font-size: small;">With years of experience crafting website WordPress and establishing a
+                        strong brand presence, out
+                        team is dedicated to delivering unparalleled service for your website needs.</p>
+                </div>
+                <div class="col-sm-4">
+                    <h6 style="font-weight: 700;"><span>Best pricing for your projects</span> </h6>
+                    <p style="font-size: small;"> Tailoring our pricing to suit your project needs, we provide the most
+                        accurate and transparent
+                        cost structures, whether you prefer hourly work or one-time payments.</p>
+                </div>
+                <div class="col-sm-4">
+                    <h6 style="font-weight: 700;"><span>Suitable solutions for your projects</span></h6>
+                    <p style="font-size: small;"> Let our dedicated team meticulously analyse your project and
+                        understand your unique needs,
+                        tailoring solutions that best fit your requirements.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--page2-->
+
+    <div class="container-fluid mt-0 mb-5 pb-5" id="page1" style="background-color: rgb(11, 9, 46);">
+        <div class="container mt-0 mb-3 py-5">
+            <h1 class="text-center mt-5" style="font-weight: 630;"> <span
+                    style="color:rgb(244, 95, 11);font-size: 50px;">Our
+                    Core</span>
+                <span style="color: rgb(249, 209, 4);font-size: 50px;">Services</span>
+            </h1>
+            <p class="text-center text-light" style="font-size:large;"> We have a specialized team that leaves no stone
+                unturned to offer the best web solutions. Our passion
+                for making the internet a better place <br> drives us to innovate and create websites that are designed
+                to
+                impress everyone. Amplify your success with our stunning and interactive websites!</p>
+        </div>
+
+        <!--boxes row1 -->
+
+        <div class="container mb-4" id="boxes-page2">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="border px-3 py-4" style=" background-color: white;color: black;">
+                        <h4 class="box-head"> UI/UX Design</h4>
+                        <p style="font-size: large;">A website has to be pleasing and engaging for customers. Our team
+                            of skilled professionals
+                            aim to
+                            bring specific interfaces into it.</p> <br>
+                        <div class="list-groups">
+                            <ul class="list-groups mx-1 px-0" style="font-size: large;">
+                                <li class="list-item"> <a href="#"
+                                        class="list-group-item list-group-item-action">Graphic User
+                                        Interface</a> </li>
+                                <li class="list-item"> <a href="#" class="list-group-item list-group-item-action">Voice
+                                        Managed
+                                        Interface</a></li>
+                                <li class="list-item"><a href="#"
+                                        class="list-group-item list-group-item-action">Marketing-Friendly
+                                        Design</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="border px-3 py-4">
+                        <h4 class="box-head"> Website Design</h4>
+                        <p style="font-size: large; margin-bottom: 13px;">A website is the face of your brand in the internet world. That's
+                            why we are here to make
+                            sure
+                            that your website has a long-lasting impression.</p>
+                        <div class="mt-1">
+                            <ul class="list-groups mx-1 px-0" style="font-size: large; ">
+                                <li class="list-item"> <a href="#"
+                                        class="list-group-item list-group-item-action">Convenient Web Design
+                                        Packages</a> </li>
+                                <li class="list-item"> <a href="#" class="list-group-item list-group-item-action">Mobile
+                                        Responsive Design</a></li>
+                                <li class="list-item"><a href="#"
+                                        class="list-group-item list-group-item-action">User-friendly Design</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="border px-3 py-4">
+                        <h4 class="box-head"> UI/UX Design</h4>
+                        <p style="font-size: large;">A website has to be pleasing and engaging for customers. Our team
+                            of skilled professionals
+                            aim to
+                            bring specific interfaces into it.</p><br>
+                        <div class="">
+                            <ul class="list-groups mx-1 px-0" style="font-size: large;">
+                                <li class="list-item"> <a href="#" class="list-group-item list-group-item-action">Custom
+                                        Theme Development
+                                    </a> </li>
+                                <li class="list-item"> <a href="#"
+                                        class="list-group-item list-group-item-action">Multiple Apps Integration
+                                    </a></li>
+                                <li class="list-item"><a href="#"
+                                        class="list-group-item list-group-item-action">Performance Optimization
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- boxes row2 -->
+        <div class="container mb-4" id="boxes-page2">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="border px-3 py-4">
+                        <h4 class="box-head"> Website Development </h4>
+                        <p style="font-size: large;">Now having an interactive, brand-oriented, customer-centered, and
+                            business result-oriented website is just a click away.</p>
+                        <div class="">
+                            <ul class="list-groups mx-1 px-0" style="font-size: large;">
+                                <li class="list-item"> <a href="#" class="list-group-item list-group-item-action">Top
+                                        Grade Front End</a> </li>
+                                <li class="list-item"> <a href="#"
+                                        class="list-group-item list-group-item-action">Functional & Optimised
+                                        Back-end</a></li>
+                                <li class="list-item"><a href="#"
+                                        class="list-group-item list-group-item-action">Transparent Processes</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="border px-3 py-4">
+                        <h4 class="box-head">CMS Development</h4>
+                        <p style="font-size: large;">At Mandy Web Design, our professional designers & developers use
+                            cutting-edge technology to accomplish your requirements.</p>
+                        <div class="mt-1">
+                            <ul class="list-groups mx-1 px-0" style="font-size: large; ">
+                                <li class="list-item"> <a href="#"
+                                        class="list-group-item list-group-item-action">WordPress</a> </li>
+                                <li class="list-item"> <a href="#"
+                                        class="list-group-item list-group-item-action">Shopify</a></li>
+                                <li class="list-item"><a href="#" class="list-group-item list-group-item-action">Wix and
+                                        Squarespace</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="border px-3 py-4">
+                        <h4 class="box-head"> Website Maintenance </h4>
+                        <p style="font-size: large;">We keep a close eye on your website for any bugs or issues. We are
+                            here to maintain your website to keep it relevant and updated..</p>
+                        <div class="">
+                            <ul class="list-groups mx-1 px-0" style="font-size: large;">
+                                <li class="list-item"> <a href="#"
+                                        class="list-group-item list-group-item-action">Regular Updates
+                                    </a> </li>
+                                <li class="list-item"> <a href="#" class="list-group-item list-group-item-action">Site
+                                        Monitoring
+                                    </a></li>
+                                <li class="list-item"><a href="#" class="list-group-item list-group-item-action">Backups
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- boxes row3 -->
+
+        <div class="container mb-4" id="boxes-page2">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="border px-3 py-4">
+                        <h4 class="box-head">E-Commerce Development</h4>
+                        <p style="font-size: large;">Wait no more for a customer-friendly, highly interactive, and
+                            scalable E-Commerce website. You have got us by your side!.</p><br>
+                        <div class="lists">
+                            <ul class="list-groups mx-1 px-0" style="font-size: large;">
+                                <li class="list-item"> <a href="#" class="list-group-item list-group-item-action">B2B
+                                        Marketplace</a> </li>
+                                <li class="list-item"> <a href="#" class="list-group-item list-group-item-action">B2C
+                                        Marketplace</a></li>
+                                <li class="list-item"><a href="#" class="list-group-item list-group-item-action">Online
+                                        Multi-store</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="border px-3 py-4">
+                        <h4 class="box-head">Website Speed Optimisation</h4>
+                        <p style="font-size: large;">The speed of the website can determine conversions. That is where
+                            you can count on us for your website speed optimization.</p><br>
+                        <div class="mt-1">
+                            <ul class="list-groups mx-1 px-0" style="font-size: large; ">
+                                <li class="list-item"> <a href="#"
+                                        class="list-group-item list-group-item-action">Speed-test for the website</a>
+                                </li>
+                                <li class="list-item"> <a href="#"
+                                        class="list-group-item list-group-item-action">Driving More Traffic</a></li>
+                                <li class="list-item"><a href="#"
+                                        class="list-group-item list-group-item-action">Increasing conversions</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="border px-3 py-4">
+                        <h4 class="box-head">Malware Removal</h4>
+                        <p style="font-size: large;">We are here to make sure that your website is error free. You can
+                            trust us with malware detection and removal for your business website.</p>
+                        <div class="">
+                            <ul class="list-groups mx-1 px-0" style="font-size: large;">
+                                <li class="list-item"> <a href="#" class="list-group-item list-group-item-action">Malware cleanups
+                                    </a> </li>
+                                <li class="list-item"> <a href="#"
+                                        class="list-group-item list-group-item-action">Malware scanner
+                                    </a></li>
+                                <li class="list-item"><a href="#"
+                                        class="list-group-item list-group-item-action">Firewall protection
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
