--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="container mb-4" id="boxes-page2">
             <div class="row">
                 <div class="col-sm-4">
-                    <div class="border px-3 py-4" style=" background-color: white;color: black;">
+                    <div class="border px-3 py-4" id="box-cols">
                         <h4 class="box-head"> UI/UX Design</h4>
                         <p style="font-size: large;">A website has to be pleasing and engaging for customers. Our team
                             of skilled professionals
@@ -171,7 +171,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="border px-3 py-4">
+                    <div class="border px-3 py-4"  id="box-cols">
                         <h4 class="box-head"> Website Design</h4>
                         <p style="font-size: large; margin-bottom: 13px;">A website is the face of your brand in the internet world. That's
                             why we are here to make
@@ -191,7 +191,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="border px-3 py-4">
+                    <div class="border px-3 py-4" id="box-cols">
                         <h4 class="box-head"> UI/UX Design</h4>
                         <p style="font-size: large;">A website has to be pleasing and engaging for customers. Our team
                             of skilled professionals
@@ -220,7 +220,7 @@
         <div class="container mb-4" id="boxes-page2">
             <div class="row">
                 <div class="col-sm-4">
-                    <div class="border px-3 py-4">
+                    <div class="border px-3 py-4" id="box-cols">
                         <h4 class="box-head"> Website Development </h4>
                         <p style="font-size: large;">Now having an interactive, brand-oriented, customer-centered, and
                             business result-oriented website is just a click away.</p>
@@ -239,7 +239,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="border px-3 py-4">
+                    <div class="border px-3 py-4" id="box-cols">
                         <h4 class="box-head">CMS Development</h4>
                         <p style="font-size: large;">At Mandy Web Design, our professional designers & developers use
                             cutting-edge technology to accomplish your requirements.</p>
@@ -256,7 +256,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="border px-3 py-4">
+                    <div class="border px-3 py-4" id="box-cols">
                         <h4 class="box-head"> Website Maintenance </h4>
                         <p style="font-size: large;">We keep a close eye on your website for any bugs or issues. We are
                             here to maintain your website to keep it relevant and updated..</p>
@@ -283,7 +283,7 @@
         <div class="container mb-4" id="boxes-page2">
             <div class="row">
                 <div class="col-sm-4">
-                    <div class="border px-3 py-4">
+                    <div class="border px-3 py-4" id="box-cols">
                         <h4 class="box-head">E-Commerce Development</h4>
                         <p style="font-size: large;">Wait no more for a customer-friendly, highly interactive, and
                             scalable E-Commerce website. You have got us by your side!.</p><br>
@@ -301,7 +301,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="border px-3 py-4">
+                    <div class="border px-3 py-4" id="box-cols">
                         <h4 class="box-head">Website Speed Optimisation</h4>
                         <p style="font-size: large;">The speed of the website can determine conversions. That is where
                             you can count on us for your website speed optimization.</p><br>
@@ -319,7 +319,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="border px-3 py-4">
+                    <div class="border px-3 py-4" id="box-cols">
                         <h4 class="box-head">Malware Removal</h4>
                         <p style="font-size: large;">We are here to make sure that your website is error free. You can
                             trust us with malware detection and removal for your business website.</p>
