added html and pics

--- a/index.html
+++ b/index.html
@@ -82,14 +82,15 @@
                         <p class="light-font" style="color: white;"> Experience the simplicity of our
                             Development
                             - each designed for easy use and customization.</p>
-                        <div class="row">
-                            <div><a href="#" class="btn light-font" id="services-btn" style="font-size: 19px;">Our
-                                    Services</a>
-                                <a href="#" class="btn light-font ms-5" id="estimate-btn"
-                                    style="font-size: 19px;">Estimate
-                                    A
-                                    Project
-                                </a>
+                        <div class="container-fluid px-0">
+                            <div class="row">
+                                <div class="col-sm-5"><a href="#" class="btn light-font" id="services-btn"
+                                        style="font-size: 19px;">Our
+                                        Services</a></div>
+                                <div class="col-sm-5"> <a href="#" class="btn light-font px-1" id="estimate-btn"
+                                        style="font-size: 19px;">Estimate A Project
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -431,24 +432,35 @@
                         style="color:rgb(244, 95, 11);font-weight: 600;">Work</span> </h1>
                 <h5 style="font-weight: 450; color: white;">We are one of the top Australian website design and
                     Development agencies, providing cutting-edge
-                    design and website development services for over 12 years. Every website we design is customized as
+                    design and website development services for over 12 years. Every website we design is customized as
                     per your audience and search engine response. Have a look at our work portfolio.
                 </h5>
-            </div>
-        </div>
-        <div class="container px-0 mx-3">
-            <div class="justify-center">
-                <div class="row text-center mb-5">
-                    <div class="col-sm-4 py-3 px-1 my-4 mx-1">
-                        <img class="img-fluid" src="images/work-pic1.PNG">
+                <!-- page2 ROW1 -->
+                <div class="row mt-4">
+                    <div class="col-sm-4 py-4">
+                        <img class="img-fluid" src="images/work-pic1.PNG" alt="img">
                     </div>
-                    <div class="col-sm-4 py-3 px-1 my-4 mx-1">
-                        <img class="img-fluid" src="images/work-pic2.PNG">
+                    <div class="col-sm-4 py-4">
+                        <img class="img-fluid" src="images/work-pic2.PNG" alt="img">
                     </div>
-                    <div class="col-sm-4 py-3 px-1 my-4 mx-1">
-                        <img class="img-fluid" src="images/work-pic3.PNG">
+                    <div class="col-sm-4 py-4">
+                        <img class="img-fluid" src="images/work-pic3.PNG" alt="img">
                     </div>
                 </div>
+                <!-- page4 ROW2 -->
+                <div class="row mb-5">
+                    <div class="col-sm-4 py-3">
+                        <img class="img-fluid" src="images/work-pic4.PNG" alt="img">
+                    </div>
+                    <div class="col-sm-4 py-3">
+                        <img class="img-fluid" src="images/work-pic5.PNG" alt="img">
+                    </div>
+                    <div class="col-sm-4 py-3">
+                        <img class="img-fluid" src="images/work-pic6.PNG" alt="img">
+                    </div>
+                </div>
+                <div class="btn text-light" id="portfolio-btn">Let me see
+                    your portfolio</div>
             </div>
         </div>
     </div>
