added html and pics

--- a/index.html
+++ b/index.html
@@ -426,11 +426,11 @@
     <!-- page4 -->
     <div class="container-fluid mt-5 py-4" style="background-color:rgb(11, 9, 46) ;">
         <div class="container mt-5">
-            <div class="text-center">
+            <div class="text-center mb-5">
                 <h1> <span style="color:rgb(244, 95, 11);font-weight: 600;">Our</span> <span
                         style="color: rgb(249, 209, 4); font-weight:600;">Featured</span> <span
                         style="color:rgb(244, 95, 11);font-weight: 600;">Work</span> </h1>
-                <h5 style="font-weight: 450; color: white;">We are one of the top Australian website design and
+                <h5 style="font-weight: 450; color: white;"> We are one of the top Australian website design and
                     Development agencies, providing cutting-edge
                     design and website development services for over 12 years. Every website we design is customized as
                     per your audience and search engine response. Have a look at our work portfolio.
@@ -459,8 +459,86 @@
                         <img class="img-fluid" src="images/work-pic6.PNG" alt="img">
                     </div>
                 </div>
-                <div class="btn text-light" id="portfolio-btn">Let me see
-                    your portfolio</div>
+                <a href="#">
+                    <div class="btn" id="portfolio-btn">Let me see
+                        your portfolio</div>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <!-- page 5 -->
+    <div class="container-fluid px-5">
+        <div class="container mt-5">
+            <div class="container px-5">
+                <div class="container px-5">
+                    <div class="text-center">
+                        <h1> Let's Build Something Awesome Together </h1>
+                        <div class="form-group">
+                            <input type="text" class="form-control mb-2" id="first-name" aria-describedby="name"
+                                placeholder="First Name">
+                            <input type="text" class="form-control mb-2" id="last-name" aria-describedby="name"
+                                placeholder="Last Name">
+                            <input type="text" class="form-control mb-2" id="phone-number" aria-describedby="number"
+                                placeholder="Phone Number">
+                        </div>
+                    </div>
+                    <div class="my-2">
+                        <lable for="services" style="font-weight: 550;"> Select Services:</lable><br>
+                        <input type="checkbox" name="web-design" value="Web Design">
+                        <lable for="services" class="check-box"> Web Design </lable><br>
+                        <input type="checkbox" name="web-design" value="Web Development">
+                        <lable for="services" class="check-box"> Web Development </lable><br>
+                        <input type="checkbox" name="web-design" value="Shopify store">
+                        <lable for="services" class="check-box"> Shopify Store </lable><br>
+                        <input type="checkbox" name="web-design" value="SEO">
+                        <lable for="services" class="check-box"> SEO </lable><br>
+                        <div class="text-center my-3">
+                            <input type="text" class="form-control mb-2" id="idea-budget" aria-describedby="idea"
+                                placeholder="Idea About Budget">
+                            <textarea class="form-control" id="text-requirement"
+                                placeholder="Please Share your Requirements"></textarea>
+                        </div>
+                    </div>
+                    <div class="text-end mb-5">
+                        <a href="#">
+                            <div class="btn submit-btn">
+                                Submit</div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid" style="background-color:rgb(11, 9, 46) ;">
+        <div class="container">
+            <div class="row text-light">
+                <div class="col-sm-3 py-4">
+                    <img class="img-fluid" id="img-logo" src="images/logo-end.png">
+                </div>
+                <div class="col-sm-3 py-4 px-5">
+                    <h4 class="heading-end"> Overview</h4>
+                    <p class="page-end-para">We are a team of passionate, creative web designers and result-oriented professionals that aim to
+                        deliver cutting-edge web design and development services to fulfill the goals and objectives of
+                        our clients.</p>
+                </div>
+                <div class="col-sm-3 py-4 px-5">
+                    <h4 class="heading-end">Useful Links</h4>
+                    <ul class="ps-3 page-end-para">
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Web Design</li>
+                        <li>Web Development</li>
+                        <li>Shopify Development</li>
+                        <li>Blog</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
+                <div class="col-sm-3 py-4 px-5">
+                    <h4 class="heading-end">Office</h4>
+                    <p class="page-end-para">Plot 733, Sector 82, JLPL Industrial Area, Sahibzada Ajit Singh Nagar, Punjab 140308</p>
+                    <p class="page-end-para">Phone: 088470 60027</p>
+                </div>
             </div>
         </div>
     </div>
